@@ -1,3 +1,7 @@
+06Jan01=======================================================================
+1. Fix set/obscount so it actually works.
+2. Allow different number formats for set/pingint eg: 5m for 5 minutes and
+120s for 120 seconds (and 1h for 1 hour).
 03Jan01=======================================================================
 1. Added a txt directory for txt versions of manuals (g0vgs)
 2. Various documentation changes
